<resources>
    <string name="app_name">CountDownTimerApp</string>
    <string name="cancel">Cancel</string>
    <string name="colon">:</string>
    <string name="min">min</string>
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="sec">sec</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="_00_00">00:00</string>

    <string name="_00">00</string>

    <string name="_01">01</string>
    <string name="_02">02</string>
    <string name="_03">03</string>
    <string name="_04">04</string>
    <string name="_05">05</string>
    <string name="_06">06</string>
    <string name="_07">07</string>
    <string name="_08">08</string>
    <string name="_09">09</string>
    <string name="_10">10</string>

    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="_16">16</string>
    <string name="_17">17</string>
    <string name="_18">18</string>
    <string name="_19">19</string>
    <string name="_20">20</string>

    <string name="_21">21</string>
    <string name="_22">22</string>
    <string name="_23">23</string>
    <string name="_24">24</string>
    <string name="_25">25</string>
    <string name="_26">26</string>
    <string name="_27">27</string>
    <string name="_28">28</string>
    <string name="_29">29</string>
    <string name="_30">30</string>

    <string name="_31">31</string>
    <string name="_32">32</string>
    <string name="_33">33</string>
    <string name="_34">34</string>
    <string name="_35">35</string>
    <string name="_36">36</string>
    <string name="_37">37</string>
    <string name="_38">38</string>
    <string name="_39">39</string>
    <string name="_40">40</string>

    <string name="_41">41</string>
    <string name="_42">42</string>
    <string name="_43">43</string>
    <string name="_44">44</string>
    <string name="_45">45</string>
    <string name="_46">46</string>
    <string name="_47">47</string>
    <string name="_48">48</string>
    <string name="_49">49</string>
    <string name="_50">50</string>

    <string name="_51">51</string>
    <string name="_52">52</string>
    <string name="_53">53</string>
    <string name="_54">54</string>
    <string name="_55">55</string>
    <string name="_56">56</string>
    <string name="_57">57</string>
    <string name="_58">58</string>
    <string name="_59">59</string>
    <string name="_60">60</string>

    <string name="_61">61</string>
    <string name="_62">62</string>
    <string name="_63">63</string>
    <string name="_64">64</string>
    <string name="_65">65</string>
    <string name="_66">66</string>
    <string name="_67">67</string>
    <string name="_68">68</string>
    <string name="_69">69</string>
    <string name="_70">70</string>

    <string name="_71">71</string>
    <string name="_72">72</string>
    <string name="_73">73</string>
    <string name="_74">74</string>
    <string name="_75">75</string>
    <string name="_76">76</string>
    <string name="_77">77</string>
    <string name="_78">78</string>
    <string name="_79">79</string>
    <string name="_80">80</string>

    <string name="_81">81</string>
    <string name="_82">82</string>
    <string name="_83">83</string>
    <string name="_84">84</string>
    <string name="_85">85</string>
    <string name="_86">86</string>
    <string name="_87">87</string>
    <string name="_88">88</string>
    <string name="_89">89</string>
    <string name="_90">90</string>

    <string name="_91">91</string>
    <string name="_92">92</string>
    <string name="_93">93</string>
    <string name="_94">94</string>
    <string name="_95">95</string>
    <string name="_96">96</string>
    <string name="_97">97</string>
    <string name="_98">98</string>
    <string name="_99">99</string>

    <string-array name="string_array_min">
        <item>@string/_00</item>

        <item>@string/_01</item>
        <item>@string/_02</item>
        <item>@string/_03</item>
        <item>@string/_04</item>
        <item>@string/_05</item>
        <item>@string/_06</item>
        <item>@string/_07</item>
        <item>@string/_08</item>
        <item>@string/_09</item>
        <item>@string/_10</item>

        <item>@string/_11</item>
        <item>@string/_12</item>
        <item>@string/_13</item>
        <item>@string/_14</item>
        <item>@string/_15</item>
        <item>@string/_16</item>
        <item>@string/_17</item>
        <item>@string/_18</item>
        <item>@string/_19</item>
        <item>@string/_20</item>

        <item>@string/_21</item>
        <item>@string/_22</item>
        <item>@string/_23</item>
        <item>@string/_24</item>
        <item>@string/_25</item>
        <item>@string/_26</item>
        <item>@string/_27</item>
        <item>@string/_28</item>
        <item>@string/_29</item>
        <item>@string/_30</item>

        <item>@string/_31</item>
        <item>@string/_32</item>
        <item>@string/_33</item>
        <item>@string/_34</item>
        <item>@string/_35</item>
        <item>@string/_36</item>
        <item>@string/_37</item>
        <item>@string/_38</item>
        <item>@string/_39</item>
        <item>@string/_40</item>

        <item>@string/_41</item>
        <item>@string/_42</item>
        <item>@string/_43</item>
        <item>@string/_44</item>
        <item>@string/_45</item>
        <item>@string/_46</item>
        <item>@string/_47</item>
        <item>@string/_48</item>
        <item>@string/_49</item>
        <item>@string/_50</item>

        <item>@string/_51</item>
        <item>@string/_52</item>
        <item>@string/_53</item>
        <item>@string/_54</item>
        <item>@string/_55</item>
        <item>@string/_56</item>
        <item>@string/_57</item>
        <item>@string/_58</item>
        <item>@string/_59</item>
        <item>@string/_60</item>

        <item>@string/_61</item>
        <item>@string/_62</item>
        <item>@string/_63</item>
        <item>@string/_64</item>
        <item>@string/_65</item>
        <item>@string/_66</item>
        <item>@string/_67</item>
        <item>@string/_68</item>
        <item>@string/_69</item>
        <item>@string/_70</item>

        <item>@string/_71</item>
        <item>@string/_72</item>
        <item>@string/_73</item>
        <item>@string/_74</item>
        <item>@string/_75</item>
        <item>@string/_76</item>
        <item>@string/_77</item>
        <item>@string/_78</item>
        <item>@string/_79</item>
        <item>@string/_80</item>

        <item>@string/_81</item>
        <item>@string/_82</item>
        <item>@string/_83</item>
        <item>@string/_84</item>
        <item>@string/_85</item>
        <item>@string/_86</item>
        <item>@string/_87</item>
        <item>@string/_88</item>
        <item>@string/_89</item>
        <item>@string/_90</item>

        <item>@string/_91</item>
        <item>@string/_92</item>
        <item>@string/_93</item>
        <item>@string/_94</item>
        <item>@string/_95</item>
        <item>@string/_96</item>
        <item>@string/_97</item>
        <item>@string/_98</item>
        <item>@string/_99</item>
    </string-array>

    <string-array name="string_array_sec">
        <item>@string/_00</item>

        <item>@string/_01</item>
        <item>@string/_02</item>
        <item>@string/_03</item>
        <item>@string/_04</item>
        <item>@string/_05</item>
        <item>@string/_06</item>
        <item>@string/_07</item>
        <item>@string/_08</item>
        <item>@string/_09</item>
        <item>@string/_10</item>

        <item>@string/_11</item>
        <item>@string/_12</item>
        <item>@string/_13</item>
        <item>@string/_14</item>
        <item>@string/_15</item>
        <item>@string/_16</item>
        <item>@string/_17</item>
        <item>@string/_18</item>
        <item>@string/_19</item>
        <item>@string/_20</item>

        <item>@string/_21</item>
        <item>@string/_22</item>
        <item>@string/_23</item>
        <item>@string/_24</item>
        <item>@string/_25</item>
        <item>@string/_26</item>
        <item>@string/_27</item>
        <item>@string/_28</item>
        <item>@string/_29</item>
        <item>@string/_30</item>

        <item>@string/_31</item>
        <item>@string/_32</item>
        <item>@string/_33</item>
        <item>@string/_34</item>
        <item>@string/_35</item>
        <item>@string/_36</item>
        <item>@string/_37</item>
        <item>@string/_38</item>
        <item>@string/_39</item>
        <item>@string/_40</item>

        <item>@string/_41</item>
        <item>@string/_42</item>
        <item>@string/_43</item>
        <item>@string/_44</item>
        <item>@string/_45</item>
        <item>@string/_46</item>
        <item>@string/_47</item>
        <item>@string/_48</item>
        <item>@string/_49</item>
        <item>@string/_50</item>

        <item>@string/_51</item>
        <item>@string/_52</item>
        <item>@string/_53</item>
        <item>@string/_54</item>
        <item>@string/_55</item>
        <item>@string/_56</item>
        <item>@string/_57</item>
        <item>@string/_58</item>
        <item>@string/_59</item>
    </string-array>
</resources>