<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/tienne"
        android:gravity="center_horizontal"
        android:textColor="@color/color_1"
        android:textSize="0sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/tienne"
                android:text="@string/min"
                android:textColor="@color/color_1"
                android:textSize="30sp"
                android:textStyle="bold" />

            <NumberPicker
                android:id="@+id/number_picker_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_1"
                android:theme="@style/NumberPickerStyle" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/tienne"
            android:text="@string/colon"
            android:textColor="@color/color_1"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/tienne"
                android:text="@string/sec"
                android:textColor="@color/color_1"
                android:textSize="30sp"
                android:textStyle="bold" />

            <NumberPicker
                android:id="@+id/number_picker_sec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/NumberPickerStyle" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="@font/tienne"
            android:text="@string/cancel"
            android:textColor="@color/color_5"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="@font/tienne"
            android:text="@string/ok"
            android:textColor="@color/color_5"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>